RESOLVED FIXED30824
[Chromium] FramelessScrollViewClient.h is missing a forward declaration of FramelessScrollView
https://bugs.webkit.org/show_bug.cgi?id=30824
Summary [Chromium] FramelessScrollViewClient.h is missing a forward declaration of Fr...
Darin Fisher (:fishd, Google)
Reported 2009-10-27 09:13:50 PDT
FramelessScrollViewClient.h is missing a forward declaration of FramelessScrollView
Attachments
v1 patch (1010 bytes, patch)
2009-10-27 09:14 PDT, Darin Fisher (:fishd, Google)
dglazkov: review+
Darin Fisher (:fishd, Google)
Comment 1 2009-10-27 09:14:44 PDT
Created attachment 41957 [details] v1 patch
Dimitri Glazkov (Google)
Comment 2 2009-10-27 14:53:35 PDT
Comment on attachment 41957 [details] v1 patch r=me.
Darin Fisher (:fishd, Google)
Comment 3 2009-10-27 22:20:14 PDT
Note You need to log in before you can comment on or make changes to this bug.