2009-10-27  Darin Fisher  <darin@chromium.org>

Reviewed by Dimitri Glazkov.

        Add missing forward declaration of FramelessScrollView.
        https://bugs.webkit.org/show_bug.cgi?id=30824

        * platform/chromium/FramelessScrollViewClient.h:



Canonical link: https://commits.webkit.org/41640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50198 268f45cc-cd09-0410-ab3c-d52691b4dbfc